2013-03-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use mlt for multiplication by constant in z180 port.

2013-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2145.

2013-03-18 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/gen_known_bugs.pl: use http instead https since the
	  LWP::Protocol::https perl module seems not to be installed by default

2013-03-16 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f1788.h,
	  device/non-free/include/pic14/pic16f1789.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/devices.txt,
	  device/non-free/lib/pic14/libdev/pic16f1788.c,
	  device/non-free/lib/pic14/libdev/pic16f1789.c,
	  doc/sdccman.lyx:
	  New devices: PIC16F1788, PIC16F1789

2013-03-15 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/gen_known_bugs.pl: adapted for Allura bug tracker

2013-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix bug #2142 (ld is fixed, upper case still open).

2013-03-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl:
	  Filters the invalid instructions and code cleaning.

2013-03-12 Sourceforge

	* Project upgrade: Bug and RFE numbers after this
	  Use a numbering system different from the one
	  used before (also some other changes).
	
2013-03-05 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/pic16f1784.h,
	  device/non-free/include/pic14/pic16f1786.h,
	  device/non-free/include/pic14/pic16f1787.h,
	  device/non-free/include/pic16/pic18f65j94.h,
	  device/non-free/include/pic16/pic18f66j60.h,
	  device/non-free/include/pic16/pic18f66j65.h,
	  device/non-free/include/pic16/pic18f66j94.h,
	  device/non-free/include/pic16/pic18f66j99.h,
	  device/non-free/include/pic16/pic18f67j60.h,
	  device/non-free/include/pic16/pic18f67j94.h,